<resources>
    <string name="app_name">MeinKampf</string>
    <string name="title">Title</string>
    <string name="tags">Tags</string>
    <string name="body">Body</string>
    <string name="add">+</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="sort">Sort by:</string>
    <string name="find">Find by tag:</string>
    <string name="bodyNotFilledError">Error. Body is empty.</string>
    <string name="note_height">100dp</string>
    <string name="note">Note</string>
</resources>
