<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NoteActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lastUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="0"
                android:weightSum="2">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/delete_button"
                    android:layout_width="0dp"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/delete"
                    android:textColor="@color/colorPrimary"
                    android:layout_gravity="bottom"
                    android:onClick="delete"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save_button"
                    android:layout_width="0dp"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/save"
                    android:textColor="@color/colorPrimary"
                    android:layout_gravity="bottom"
                    android:onClick="save"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <EditText
                        android:id="@+id/titleEdit"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/title" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/tagsEdit"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/tags" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/bodyEdit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top|start"
                        android:hint="@string/note" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>